# UsbHidHost

./: .gitignore  CMakeLists.txt  README.md  library.json  library.properties  platformio.ini  sdkconfig  sdkconfig.basic  sdkconfig.old
boards/: khronos_esp32s3.json
examples/basic/src/: CMakeLists.txt  main.cpp
include/: UsbHidHost.h  UsbHostHid.h
src/: CMakeLists.txt  README.md  UsbHidHost.cpp  UsbHostHid.cpp
src/reports/: UsbHidBaseReport.h  UsbHidG20sProReport.cpp  UsbHidG20sProReport.h  UsbHidGenericReport.cpp  UsbHidGenericReport.h  UsbHidKeyboardReport.cpp  UsbHidKeyboardReport.h  UsbHidMouseReport.cpp  UsbHidMouseReport.h
src/usb/: hid.h
